--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -183,7 +183,7 @@
                     <div class="col-md-4 col-sm-6 col-12">
                         <div class="panel panel-primary">
                             <div class="panel-heading"><span><strong>Hà Nội</strong></span></div>
-                            <div class="panel-body"><a th:href="@{/user/list-hotelProvince/__${province_hn}__}"><img th:src="@{../hanoi.png}" class="img-responsive"
+                            <div class="panel-body"><a th:href="@{/user/list-hotelProvince/__${province_hn}__}"><img th:src="@{/hanoi.png}" class="img-responsive"
                                                          style="width:100%" alt="Image"></a></div>
                             <div class="panel-footer">NƠi tụ họp của dân tổ</div>
                         </div>
