--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -166,7 +166,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img th:src="@{../hanoi.png}" alt="New York" width="500" height="500">
+            <img th:src="@{https://halotravel.vn/wp-content/uploads/2020/04/ho-boi-vo-cuc-viet-nam-sapa-6-1024x683.jpg}" alt="New York" width="500" height="500">
             <div class="carousel-caption">
                 <h3>New York</h3>
                 <p>Thank you, New Yorl - A night we won't forget.</p>
@@ -174,7 +174,7 @@
 
         </div>
         <div class="item">
-            <img th:src="@{../bannerdalat.jpg}" alt="Chicago" width="500" height="500">
+            <img th:src="@{https://cdn.vntrip.vn/cam-nang/wp-content/uploads/2017/04/khach-san-quy-nhon-gan-bien-flc-2.jpg}" alt="Chicago" width="500" height="500">
             <div class="carousel-caption">
                 <h3>Chicago</h3>
                 <p>Thank you, Chicago - A night we won't forget.</p>
