--- a/src/main/resources/templates/room/detailsRoomHotel.html
+++ b/src/main/resources/templates/room/detailsRoomHotel.html
@@ -3,28 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <style>
+        div.stars {
+        }
+
+        a.star {
+            font-size: 24px;
+            color: #f0f1f4;
+            cursor: pointer;
+            line-height: 1;
+            transition: all 0.1s ease;
+        }
+
+        a.star.vote-hover {
+            color: yellow;
+        }
+
+        a.star:active {
+            color: yellow;
+        }
+
+        a.star.vote-active {
+            color: yellow;
+        }
+
+        .blue {
+            color: #0faef1;
+        }
+    </style>
     <script type="text/javascript">
-        $(document).ready(function() {
-            $('#formComment').submit(function(event) { // là funtion được gọi khi submit from có id là newSmartphoneForm
+        $(document).ready(function () {
+            var rate;
+            //star
+            /*
+            * Hiệu ứng khi rê chuột lên ngôi sao
+            */
+            $('a.star').mouseenter(function () {
+                if ($('#cate-rating').hasClass('rating-ok') == false) {
+                    rate = $(this).attr('id');
+                    rate = rate.split('-').splice(-1);
+                    $('a.star').removeClass('vote-active');
+                    for (var i = 1; i <= rate; i++) {
+                        $('#star-' + i).addClass('vote-hover');
+                    }
+                }
+            }).mouseleave(function () {
+                if ($('#cate-rating').hasClass('rating-ok') == false) {
+                    $('a.star').removeClass('vote-hover');
+                }
+            });
+            $('a.star').click(function() {
+                if ($('#cate-rating').hasClass('rating-ok') == false) {
+                    rate = $(this).attr('id');
+                    rate = rate.split('-').splice(-1).toString();
+                    for (var i = 1; i <= rate; i++) {
+                        $('#star-' + i).addClass('vote-active');
+
+                    }
+                    $('p#vote-desc').html('<span class="blue">' + rate);
+                    $('#cate-rating').addClass('rating-ok');
+                }
+            });
+            //end star
+            $('#formComment').submit(function (event) { // là funtion được gọi khi submit from có id là newSmartphoneForm
                 var content = $('#content').val();
                 var hotel = $('#hotel').val();
-                // var rate = $('#id_hotelCurrent').val();
                 var user = $('#user').val();// thực hiện lấy dữ liệu từ các input tương ứng
                 var json = {
-                    "hotel_id" : parseInt(hotel),
-                    "user_id" : parseInt(user),
-                    "content" : content
+                    "hotel_id": parseInt(hotel),
+                    "user_id": parseInt(user),
+                    "content": content,
+                    "rate":rate
                 };// gán các biến vào các trường tương ứng của đối tượng json.
                 $.ajax({
                     headers: {
                         'Accept': 'application/json',
                         'Content-Type': 'application/json'
                     },
-                    type : "POST", // method
+                    type: "POST", // method
                     data: JSON.stringify(json),
                     url: "/create-comment", //link này ở RequestMapping
-                    success: function(comment) { // reponse này ở requestBody
+                    success: function (comment) { // reponse này ở requestBody
                         var respContent = "";
                         respContent += "<div><span>";
                         respContent += comment.user.fullName + "</span></div>";
@@ -33,8 +97,7 @@
                         // $("#allComment").html(respContent);
                         $("#allComment").prepend(respContent);
                         $("#content").val("");
-                    },  error: function(){
-
+                    }, error: function () {
                         console.log(this.error);
                     }
                 });
@@ -44,38 +107,45 @@
         });
     </script>
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
         }
+
         .rate {
             float: left;
             height: 46px;
             padding: 0 10px;
         }
+
         .rate:not(:checked) > input {
-            position:absolute;
-            top:-9999px;
+            position: absolute;
+            top: -9999px;
         }
+
         .rate:not(:checked) > label {
-            float:right;
-            width:1em;
-            overflow:hidden;
-            white-space:nowrap;
-            cursor:pointer;
-            font-size:30px;
-            color:#ccc;
+            float: right;
+            width: 1em;
+            overflow: hidden;
+            white-space: nowrap;
+            cursor: pointer;
+            font-size: 30px;
+            color: #ccc;
         }
+
         .rate:not(:checked) > label:before {
             content: '★ ';
         }
+
         .rate > input:checked ~ label {
             color: #ffc700;
         }
+
         .rate:not(:checked) > label:hover,
         .rate:not(:checked) > label:hover ~ label {
             color: #deb217;
         }
+
         .rate > input:checked + label:hover,
         .rate > input:checked + label:hover ~ label,
         .rate > input:checked ~ label:hover,
@@ -103,7 +173,8 @@
     </tr>
     <tr th:each="room : ${rooms}">
         <td th:text="${room.name}"></td>
-        <td><a th:href="@{/user/room-details/__${room.id}__}"><img th:src="@{'http://localhost:8080/' + ${room.image}}" style="height: 150px;width: 150px"></a></td>
+        <td><a th:href="@{/user/room-details/__${room.id}__}"><img th:src="@{'http://localhost:8080/' + ${room.image}}"
+                                                                   style="height: 150px;width: 150px"></a></td>
         <td th:text="${room.price}"></td>
         <td th:text="${room.description}"></td>
         <td th:text="${room.hotel.name}"></td>
@@ -112,57 +183,45 @@
     </tr>
 </table>
 <div class="row">
-<!--    <div class="container">-->
-<!--        <th:block th:each="comment : ${allComment}">-->
-<!--            <label th:text="${comment.user.fullName}"></label><br>-->
-<!--            <span th:text="${comment.content}"></span><br>-->
-<!--        </th:block>-->
-<!--        <div id="allComment"></div>-->
-<!--    </div>-->
     <div id="allComment">
-    <th:block th:each="comment : ${allComment}">
-        <label th:text="${comment.user.fullName}"></label><br>
-        <div>
-            <span th:text="${comment.content}"></span>
-        </div>
-        <br>
-    </th:block>
-</div>
+        <th:block th:each="comment : ${allComment}">
+            <label th:text="${comment.user.fullName}"></label>
+            <span th:text="${comment.rate}"></span><br>
+            <div>
+                <span th:text="${comment.content}"></span>
+            </div>
+            <br>
+        </th:block>
+    </div>
 </div>
 <div class="row">
     <div class="container">
         <form id="formComment" th:object="${comment}">
+            <div id="cate-rating" class="cate-rating">
+                <div class="stars">
+                    <a id="star-1" class="star"><span class="glyphicon glyphicon-star"></span></a>
+                    <a id="star-2" class="star"><span class="glyphicon glyphicon-star"></span></a>
+                    <a id="star-3" class="star"><span class="glyphicon glyphicon-star"></span></a>
+                    <a id="star-4" class="star"><span class="glyphicon glyphicon-star"></span></a>
+                    <a id="star-5" class="star"><span class="glyphicon glyphicon-star"></span></a>
+                    <p id="vote-desc">Mời bạn cho điểm!</p>
+                </div>
+                <div class="clearfix"></div>
+            </div>
             <table border="1">
                 <tr>
                     <td>
-<!--                        <input type="hidden" id="id_hotelCurrent" name="id_hotelCurrent" th:field="${hotelCurrent}">-->
                         <input type="hidden" id="userCurrent" name="userCurrent" th:field="${userCurrent}">
                         <input type="hidden" id="user" name="user" th:value="${userCurrent.id}">
                         <input type="hidden" id="id_hotelCurrent" name="id_hotelCurrent" th:field="${hotelCurrent.id}">
                         <input type="hidden" id="hotel" name="hotelCurrent" th:value="${hotelCurrent.id}">
-                   <textarea id="content" th:field="${comment.content}">
+                        <textarea id="content" th:field="${comment.content}">
                    </textarea>
                     </td>
                 </tr>
                 <tr>
                     <td><input type="submit" class="btn btn-success" value="comment"></td>
                 </tr>
-<!--                <tr>-->
-<!--                    <td>-->
-<!--                        <div class="rate">-->
-<!--                            <input type="radio" id="star5" name="rate" value="5" />-->
-<!--                            <label for="star5" title="text">5 stars</label>-->
-<!--                            <input type="radio" id="star4" name="rate" value="4" />-->
-<!--                            <label for="star4" title="text">4 stars</label>-->
-<!--                            <input type="radio" id="star3" name="rate" value="3" />-->
-<!--                            <label for="star3" title="text">3 stars</label>-->
-<!--                            <input type="radio" id="star2" name="rate" value="2" />-->
-<!--                            <label for="star2" title="text">2 stars</label>-->
-<!--                            <input type="radio" id="star1" name="rate" value="1" />-->
-<!--                            <label for="star1" title="text">1 star</label>-->
-<!--                        </div>-->
-<!--                    </td>-->
-<!--                </tr>-->
             </table>
 
         </form>
