--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -24,6 +24,9 @@
             box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
             border-radius: 5px;
         }
+        .carousel-item{
+            height: 650px;
+        }
         .img>img {
             transition: 0.6s;
             width: 100%;
@@ -58,6 +61,11 @@
         body {
             background: #fcc3a6;
         }
+        /*.navbar{*/
+        /*    position: fixed;*/
+        /*    top: 0;*/
+        /*    width:   100%;*/
+        /*}*/
     </style>
 </head>
 <body>
@@ -107,14 +115,26 @@
         </form>
     </div>
 </nav>
-<div class="container">
-    <div class="carousel-item">
-        <img th:src="@{https://baoquocte.vn/stores/news_dataimages/dieulinh/012020/29/15/nhung-buc-anh-dep-tuyet-voi-ve-tinh-ban.jpg}" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-            <h5>...</h5>
-            <p>...</p>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" width="100%" height="100%" th:src="@{https://img.lovepik.com/photo/50081/0167.jpg_wh860.jpg}" alt="First slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" th:src="@{https://a25hotel.com/admin/webroot/upload/image/images/anh%20maldives%208.jpg}" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" th:src="@{https://media.baodautu.vn/Images/phuongthanh/2020/07/02/4.jpg}" alt="Third slide">
         </div>
     </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
 <div class="container">
 <div class="container">
